Bug 195809 - Radio buttons in "Search Group" "Options" in "Advanced search" dialog do not show selection status
Summary: Radio buttons in "Search Group" "Options" in "Advanced search" dialog do not ...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Searches-Advanced (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-09 20:01 UTC by Michael Liddle
Modified: 2017-08-18 06:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Liddle 2009-06-09 20:01:59 UTC
Version:           0.10.0 (using 4.2.88 (KDE 4.2.88 (KDE 4.3 >= 20090527)) "release 127", KDE:KDE4:Factory:Desktop / openSUSE_11.0)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25.20-0.4-default

Steps to reproduce:

1. Open the "Advanced search" dialog (from the left sidebar)
2. Click the "Options >>" link
3. Click one of the radio buttons 
4. The clicked button will not show as "selected"

_However_ the selection does nonetheless appear to work, in that the button clicked on has the desired effect.
Comment 1 caulier.gilles 2009-06-09 21:15:42 UTC
I confirm. Sound like a style sheet problem.

Gilles  Caulier
Comment 2 Andi Clemens 2009-06-11 11:50:43 UTC
Yes, but strangely enough it only happens with the default theme, which should be the normal Qt style?
All other themes work fine.

Andi
Comment 3 Marcel Wiesweg 2009-06-11 13:43:58 UTC
Look closely: all is painted perfectly - but the "black" dot in the indicator is now white! (following the text color, which is - white)
Seems to be a new "feature" of Qt4.5.
How to fix that? Setting the color property on QRadioButton::indicator does not seem to work, setting the background-color breaks is completely.
As a last resort, we must use the radio buttons without text and without style sheet, and the labels as separate QLabels. Better ideas?
Comment 4 Marcel Wiesweg 2009-06-29 21:41:06 UTC
SVN commit 989239 by mwiesweg:

Use a radio button and a separate QLabel, which only is styled, to workaround styling
problems (white color of text is reused for indicator in radio button circle)

BUG: 195809

 M  +4 -2      NEWS  
 M  +41 -16    utilities/searchwindow/searchgroup.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=989239