Use a radio button and a separate QLabel, which only is styled, to workaround styling problems (white color of text is reused for indicator in radio button circle)

BUG: 195809

svn path=/trunk/extragear/graphics/digikam/; revision=989239